--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 05.12.19 19:35
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -31,7 +31,7 @@
 
 
 	    <ImageView
-	        android:id="@+id/card_loading_progress_iv"
+	        android:id="@+id/ivCardLoading"
 	        android:layout_width="120dp"
 	        android:layout_height="120dp"
 		    android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE, default = "visible"}'
@@ -43,7 +43,7 @@
 	        tools:ignore="ContentDescription" />
 
 	    <TextView
-		    android:id="@+id/card_helper_text_tv"
+		    android:id="@+id/tvCardHelperText"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 		    android:gravity="center"
@@ -52,12 +52,12 @@
 	        app:layout_constraintBottom_toBottomOf="parent"
 	        app:layout_constraintEnd_toEndOf="parent"
 	        app:layout_constraintStart_toStartOf="parent"
-		    app:layout_constraintTop_toBottomOf="@id/card_loading_progress_iv"
+		    app:layout_constraintTop_toBottomOf="@id/ivCardLoading"
 		    app:layout_constraintVertical_bias="0.3"
 		    style="@style/regular_text_white_18sp_85op" />
 
 	    <com.yuyakaido.android.cardstackview.CardStackView
-	        android:id="@+id/card_stack_view"
+	        android:id="@+id/cardStackView"
 	        android:layout_width="0dp"
 	        android:layout_height="0dp"
 		    android:visibility='@{viewModel.showLoading ? View.GONE : View.VISIBLE, default = "gone"}'
