--- a/app/src/main/res/layout/fragment_place_detailed.xml
+++ b/app/src/main/res/layout/fragment_place_detailed.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 05.12.19 16:08
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -28,17 +28,17 @@
 			android:layout_height="match_parent" >
 
 			<androidx.viewpager2.widget.ViewPager2
-				android:id="@+id/event_photos_vp"
+				android:id="@+id/viewPagerPlacePhotos"
 				android:layout_width="match_parent"
 				android:layout_height="300dp"
 				android:background="@color/colorPrimary"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/event_about_header_tv"/>
+				app:layout_constraintTop_toBottomOf="@id/tvPlaceAboutHeader"/>
 
 			<com.google.android.material.tabs.TabLayout
-				android:id="@+id/dots_indicator"
+				android:id="@+id/tlDotsIndicatorPlace"
 				android:background="@color/transparent"
 				android:layout_width="match_parent"
 				android:layout_height="10dp"
@@ -46,7 +46,7 @@
 				android:layout_marginBottom="8dp"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toBottomOf="@id/event_photos_vp"
+				app:layout_constraintBottom_toBottomOf="@id/viewPagerPlacePhotos"
 				app:layout_constraintVertical_bias="1.0"
 				app:tabBackground="@drawable/dot_unselected_state"
 				app:tabIndicator="@drawable/dot_selection_indicator"
@@ -56,7 +56,7 @@
 				app:tabMaxWidth="12dp" />
 
 			<TextView
-				android:id="@+id/event_title"
+				android:id="@+id/tvPlaceTitle"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/general_margin_16"
@@ -64,23 +64,23 @@
 				style="@style/medium_text_white_28sp_85op"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toBottomOf="@id/event_photos_vp"
+				app:layout_constraintBottom_toBottomOf="@id/viewPagerPlacePhotos"
 				app:layout_constraintVertical_bias="0.9" />
 
 			<TextView
-				android:id="@+id/event_about_header_tv"
+				android:id="@+id/tvPlaceAboutHeader"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:padding="@dimen/general_margin_16"
 				android:text="About"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/event_photos_vp"
-				app:layout_constraintBottom_toTopOf="@id/event_about_content_tv"
+				app:layout_constraintTop_toBottomOf="@id/viewPagerPlacePhotos"
+				app:layout_constraintBottom_toTopOf="@id/tvPlaceAboutText"
 				style="@style/medium_text_white_22sp_85op" />
 
 			<TextView
-				android:id="@+id/event_about_content_tv"
+				android:id="@+id/tvPlaceAboutText"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:lineSpacingExtra="10sp"
@@ -89,7 +89,7 @@
 				android:text="TEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\n"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/event_about_header_tv"
+				app:layout_constraintTop_toBottomOf="@id/tvPlaceAboutHeader"
 				style="@style/regular_text_white_16sp_85op" />
 
 
