--- a/app/src/main/res/layout/dialog_chat_full_screen_image.xml
+++ b/app/src/main/res/layout/dialog_chat_full_screen_image.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 07.12.19 18:32
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -25,7 +25,7 @@
 		android:background="@color/black">
 
 			<ImageView
-				android:id="@+id/fullscreen_imageView"
+				android:id="@+id/ivDialogFullScreen"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:adjustViewBounds="true"
