--- a/app/src/main/res/layout/fragment_places_page_item.xml
+++ b/app/src/main/res/layout/fragment_places_page_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 05.12.19 16:27
+  ~ Last modified 07.12.19 18:32
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -10,12 +10,12 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
-	android:id="@+id/containerPlaces"
+	android:id="@+id/placesContainer"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/rvPlacesList"
@@ -23,15 +23,17 @@
 		android:layout_height="0dp"
 		android:background="@color/colorPrimaryDark"
 		android:clipToPadding="false"
-		android:layout_marginStart="@dimen/card_margin_fix_rview_8"
-		android:layout_marginEnd="@dimen/general_margin_16"
 		android:overScrollMode="never"
+
+		android:layout_marginEnd="@dimen/general_margin_8"
+
 		app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+		app:spanCount="2"
+		tools:listitem="@layout/fragment_places_rv_item"
+
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:spanCount="2"
-		tools:listitem="@layout/fragment_places_rv_item" />
+		app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
