--- a/app/src/main/res/drawable/ic_arrow_back_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_back_24dp.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 08.12.19 15:28
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,7 +11,7 @@
 <vector
     android:height="24dp"
     android:width="24dp"
-    android:tint="@color/white_85"
+    android:tint="@color/white"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
