minor changes on cards

--- a/app/src/main/res/drawable/fragment_card_item_like_overlay.xml
+++ b/app/src/main/res/drawable/fragment_card_item_like_overlay.xml
@@ -3,7 +3,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 09.12.19 17:04
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,15 +12,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid
-        android:color="#88000000"
-        />
+    <solid android:color="#4D4FC3F7" />
 
-    <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        />
+    <corners android:radius="10dp" />
 
 </shape>
