--- a/app/src/main/res/layout/fragment_cards_item.xml
+++ b/app/src/main/res/layout/fragment_cards_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 09.12.19 17:07
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -32,63 +32,92 @@
 		app:cardCornerRadius="10dp"
 		app:cardBackgroundColor="@color/colorPrimary" >
 
-		<ImageView
-			android:id="@+id/fragment_card_item_img_photo"
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/cardContainer"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:contentDescription="@string/description_user_photo"
-			android:scaleType="centerCrop"
-			app:imageUrl="@{cardItem.mainPhotoUrl}" />
+			android:layout_height="match_parent">
 
-		<LinearLayout
+			<ImageView
+				android:id="@+id/ivCardFacePhoto"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				android:contentDescription="@string/description_user_photo"
+				android:scaleType="centerCrop"
 
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="@drawable/fragment_card_item_gradation_black"
-			android:layout_gravity="bottom"
-			android:orientation="vertical"
-			android:padding="16dp" >
+				app:imageUrl="@{cardItem.mainPhotoUrl}"
+
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+			<View
+				android:id="@+id/ivCardBottomGradient"
+				android:layout_width="0dp"
+				android:layout_height="100dp"
+				android:layout_gravity="bottom"
+				android:background="@drawable/gradient_transparent"
+				android:scaleType="centerCrop"
+
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent" />
 
 			<TextView
-				android:id="@+id/fragment_card_item_text_name"
+				android:id="@+id/tvCardUserName"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_margin="@dimen/general_margin_16"
 				android:text="@{cardItem.name, default = @string/default_name}"
+
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent"
+
 				style="@style/regular_text_white_24sp_85op" />
 
+			<FrameLayout
+				android:id="@+id/left_overlay"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				android:background="@drawable/fragment_card_item_skip_overlay"
 
-		</LinearLayout>
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent">
 
-		<FrameLayout
-			android:id="@+id/left_overlay"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@drawable/fragment_card_item_overlay_black" >
+				<ImageView
+					android:id="@+id/ivCardSkipIndicator"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:contentDescription="@string/fragment_card_skip_img_description"
+					android:src="@drawable/ic_card_skip_120dp" />
 
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:contentDescription="@string/fragment_card_skip_img_description"
-				android:src="@drawable/fragment_card_skip_120dp" />
+			</FrameLayout>
 
-		</FrameLayout>
+			<FrameLayout
+				android:id="@+id/right_overlay"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				android:background="@drawable/fragment_card_item_like_overlay"
 
-		<FrameLayout
-			android:id="@+id/right_overlay"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@drawable/fragment_card_item_overlay_black" >
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent">
 
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:contentDescription="@string/fragment_card_like_img_description"
-				android:src="@drawable/fragment_card_like_120dp" />
+				<ImageView
+					android:id="@+id/ivCardLikeIndicator"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:contentDescription="@string/fragment_card_like_img_description"
+					android:src="@drawable/ic_card_like_120dp" />
 
-		</FrameLayout>
+			</FrameLayout>
 
+		</androidx.constraintlayout.widget.ConstraintLayout>
 
 	</androidx.cardview.widget.CardView>
 </layout>
